sintatico.output
Grammar

    0 $accept: programa $end

    1 $@1: %empty

    2 programa: cabecalho variaveis $@1 T_INICIO lista_comandos T_FIM

    3 cabecalho: T_PROGRAMA T_IDENTIF

    4 variaveis: %empty
    5          | declaracao_variaveis

    6 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis
    7                     | tipo lista_variaveis

    8 tipo: T_INTEIRO
    9     | T_LOGICO

   10 lista_variaveis: lista_variaveis variavel
   11                | variavel

   12 $@2: %empty

   13 variavel: T_IDENTIF $@2 tamanho

   14 tamanho: %empty

   15 $@3: %empty

   16 tamanho: T_ABREC T_NUMERO $@3 T_FECHAC

   17 lista_comandos: %empty
   18               | comando lista_comandos

   19 comando: leitura
   20        | escrita
   21        | repeticao
   22        | selecao
   23        | atribuicao

   24 $@4: %empty

   25 leitura: T_LEIA T_IDENTIF $@4 posicao

   26 posicao: %empty
   27        | T_ABREC expr T_FECHAC

   28 escrita: T_ESCREVA expr

   29 $@5: %empty

   30 $@6: %empty

   31 repeticao: T_ENQTO $@5 expr T_FACA $@6 lista_comandos T_FIMENQTO

   32 $@7: %empty

   33 $@8: %empty

   34 selecao: T_SE expr T_ENTAO $@7 lista_comandos T_SENAO $@8 lista_comandos T_FIMSE

   35 $@9: %empty

   36 atribuicao: T_IDENTIF $@9 indexador T_ATRIB expr

   37 indexador: %empty

   38 $@10: %empty

   39 indexador: T_ABREC expr $@10 T_FECHAC

   40 expr: expr T_VEZES expr
   41     | expr T_DIV expr
   42     | expr T_MAIS expr
   43     | expr T_MENOS expr
   44     | expr T_MAIOR expr
   45     | expr T_MENOR expr
   46     | expr T_IGUAL expr
   47     | expr T_E expr
   48     | expr T_OU expr
   49     | termo

   50 $@11: %empty

   51 termo: T_IDENTIF $@11 indice
   52      | T_NUMERO
   53      | T_V
   54      | T_F
   55      | T_NAO termo
   56      | T_ABRE expr T_FECHA

   57 indice: %empty
   58       | T_ABREC expr T_FECHAC


Terminals, with rules where they appear

    $end (0) 0
    error (256)
    T_PROGRAMA (258) 3
    T_INICIO (259) 2
    T_FIM (260) 2
    T_IDENTIF (261) 3 13 25 36 51
    T_LEIA (262) 25
    T_ESCREVA (263) 28
    T_ENQTO (264) 31
    T_FACA (265) 31
    T_FIMENQTO (266) 31
    T_SE (267) 34
    T_ENTAO (268) 34
    T_SENAO (269) 34
    T_FIMSE (270) 34
    T_ATRIB (271) 36
    T_VEZES (272) 40
    T_DIV (273) 41
    T_MAIS (274) 42
    T_MENOS (275) 43
    T_IGUAL (276) 46
    T_MAIOR (277) 44
    T_MENOR (278) 45
    T_E (279) 47
    T_OU (280) 48
    T_V (281) 53
    T_F (282) 54
    T_NUMERO (283) 16 52
    T_NAO (284) 55
    T_ABRE (285) 56
    T_FECHA (286) 56
    T_ABREC (287) 16 27 39 58
    T_FECHAC (288) 16 27 39 58
    T_INTEIRO (289) 8
    T_LOGICO (290) 9


Nonterminals, with rules where they appear

    $accept (36)
        on left: 0
    programa (37)
        on left: 2
        on right: 0
    $@1 (38)
        on left: 1
        on right: 2
    cabecalho (39)
        on left: 3
        on right: 2
    variaveis (40)
        on left: 4 5
        on right: 2
    declaracao_variaveis (41)
        on left: 6 7
        on right: 5 6
    tipo (42)
        on left: 8 9
        on right: 6 7
    lista_variaveis (43)
        on left: 10 11
        on right: 6 7 10
    variavel (44)
        on left: 13
        on right: 10 11
    $@2 (45)
        on left: 12
        on right: 13
    tamanho (46)
        on left: 14 16
        on right: 13
    $@3 (47)
        on left: 15
        on right: 16
    lista_comandos (48)
        on left: 17 18
        on right: 2 18 31 34
    comando (49)
        on left: 19 20 21 22 23
        on right: 18
    leitura (50)
        on left: 25
        on right: 19
    $@4 (51)
        on left: 24
        on right: 25
    posicao (52)
        on left: 26 27
        on right: 25
    escrita (53)
        on left: 28
        on right: 20
    repeticao (54)
        on left: 31
        on right: 21
    $@5 (55)
        on left: 29
        on right: 31
    $@6 (56)
        on left: 30
        on right: 31
    selecao (57)
        on left: 34
        on right: 22
    $@7 (58)
        on left: 32
        on right: 34
    $@8 (59)
        on left: 33
        on right: 34
    atribuicao (60)
        on left: 36
        on right: 23
    $@9 (61)
        on left: 35
        on right: 36
    indexador (62)
        on left: 37 39
        on right: 36
    $@10 (63)
        on left: 38
        on right: 39
    expr (64)
        on left: 40 41 42 43 44 45 46 47 48 49
        on right: 27 28 31 34 36 39 40 41 42 43 44 45 46 47 48 56 58
    termo (65)
        on left: 51 52 53 54 55 56
        on right: 49 55
    $@11 (66)
        on left: 50
        on right: 51
    indice (67)
        on left: 57 58
        on right: 51


State 0

    0 $accept: . programa $end

    T_PROGRAMA  shift, and go to state 1

    programa   go to state 2
    cabecalho  go to state 3


State 1

    3 cabecalho: T_PROGRAMA . T_IDENTIF

    T_IDENTIF  shift, and go to state 4


State 2

    0 $accept: programa . $end

    $end  shift, and go to state 5


State 3

    2 programa: cabecalho . variaveis $@1 T_INICIO lista_comandos T_FIM

    T_INTEIRO  shift, and go to state 6
    T_LOGICO   shift, and go to state 7

    $default  reduce using rule 4 (variaveis)

    variaveis             go to state 8
    declaracao_variaveis  go to state 9
    tipo                  go to state 10


State 4

    3 cabecalho: T_PROGRAMA T_IDENTIF .

    $default  reduce using rule 3 (cabecalho)


State 5

    0 $accept: programa $end .

    $default  accept


State 6

    8 tipo: T_INTEIRO .

    $default  reduce using rule 8 (tipo)


State 7

    9 tipo: T_LOGICO .

    $default  reduce using rule 9 (tipo)


State 8

    2 programa: cabecalho variaveis . $@1 T_INICIO lista_comandos T_FIM

    $default  reduce using rule 1 ($@1)

    $@1  go to state 11


State 9

    5 variaveis: declaracao_variaveis .

    $default  reduce using rule 5 (variaveis)


State 10

    6 declaracao_variaveis: tipo . lista_variaveis declaracao_variaveis
    7                     | tipo . lista_variaveis

    T_IDENTIF  shift, and go to state 12

    lista_variaveis  go to state 13
    variavel         go to state 14


State 11

    2 programa: cabecalho variaveis $@1 . T_INICIO lista_comandos T_FIM

    T_INICIO  shift, and go to state 15


State 12

   13 variavel: T_IDENTIF . $@2 tamanho

    $default  reduce using rule 12 ($@2)

    $@2  go to state 16


State 13

    6 declaracao_variaveis: tipo lista_variaveis . declaracao_variaveis
    7                     | tipo lista_variaveis .
   10 lista_variaveis: lista_variaveis . variavel

    T_IDENTIF  shift, and go to state 12
    T_INTEIRO  shift, and go to state 6
    T_LOGICO   shift, and go to state 7

    $default  reduce using rule 7 (declaracao_variaveis)

    declaracao_variaveis  go to state 17
    tipo                  go to state 10
    variavel              go to state 18


State 14

   11 lista_variaveis: variavel .

    $default  reduce using rule 11 (lista_variaveis)


State 15

    2 programa: cabecalho variaveis $@1 T_INICIO . lista_comandos T_FIM

    T_IDENTIF  shift, and go to state 19
    T_LEIA     shift, and go to state 20
    T_ESCREVA  shift, and go to state 21
    T_ENQTO    shift, and go to state 22
    T_SE       shift, and go to state 23

    $default  reduce using rule 17 (lista_comandos)

    lista_comandos  go to state 24
    comando         go to state 25
    leitura         go to state 26
    escrita         go to state 27
    repeticao       go to state 28
    selecao         go to state 29
    atribuicao      go to state 30


State 16

   13 variavel: T_IDENTIF $@2 . tamanho

    T_ABREC  shift, and go to state 31

    $default  reduce using rule 14 (tamanho)

    tamanho  go to state 32


State 17

    6 declaracao_variaveis: tipo lista_variaveis declaracao_variaveis .

    $default  reduce using rule 6 (declaracao_variaveis)


State 18

   10 lista_variaveis: lista_variaveis variavel .

    $default  reduce using rule 10 (lista_variaveis)


State 19

   36 atribuicao: T_IDENTIF . $@9 indexador T_ATRIB expr

    $default  reduce using rule 35 ($@9)

    $@9  go to state 33


State 20

   25 leitura: T_LEIA . T_IDENTIF $@4 posicao

    T_IDENTIF  shift, and go to state 34


State 21

   28 escrita: T_ESCREVA . expr

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expr   go to state 41
    termo  go to state 42


State 22

   31 repeticao: T_ENQTO . $@5 expr T_FACA $@6 lista_comandos T_FIMENQTO

    $default  reduce using rule 29 ($@5)

    $@5  go to state 43


State 23

   34 selecao: T_SE . expr T_ENTAO $@7 lista_comandos T_SENAO $@8 lista_comandos T_FIMSE

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expr   go to state 44
    termo  go to state 42


State 24

    2 programa: cabecalho variaveis $@1 T_INICIO lista_comandos . T_FIM

    T_FIM  shift, and go to state 45


State 25

   18 lista_comandos: comando . lista_comandos

    T_IDENTIF  shift, and go to state 19
    T_LEIA     shift, and go to state 20
    T_ESCREVA  shift, and go to state 21
    T_ENQTO    shift, and go to state 22
    T_SE       shift, and go to state 23

    $default  reduce using rule 17 (lista_comandos)

    lista_comandos  go to state 46
    comando         go to state 25
    leitura         go to state 26
    escrita         go to state 27
    repeticao       go to state 28
    selecao         go to state 29
    atribuicao      go to state 30


State 26

   19 comando: leitura .

    $default  reduce using rule 19 (comando)


State 27

   20 comando: escrita .

    $default  reduce using rule 20 (comando)


State 28

   21 comando: repeticao .

    $default  reduce using rule 21 (comando)


State 29

   22 comando: selecao .

    $default  reduce using rule 22 (comando)


State 30

   23 comando: atribuicao .

    $default  reduce using rule 23 (comando)


State 31

   16 tamanho: T_ABREC . T_NUMERO $@3 T_FECHAC

    T_NUMERO  shift, and go to state 47


State 32

   13 variavel: T_IDENTIF $@2 tamanho .

    $default  reduce using rule 13 (variavel)


State 33

   36 atribuicao: T_IDENTIF $@9 . indexador T_ATRIB expr

    T_ABREC  shift, and go to state 48

    $default  reduce using rule 37 (indexador)

    indexador  go to state 49


State 34

   25 leitura: T_LEIA T_IDENTIF . $@4 posicao

    $default  reduce using rule 24 ($@4)

    $@4  go to state 50


State 35

   51 termo: T_IDENTIF . $@11 indice

    $default  reduce using rule 50 ($@11)

    $@11  go to state 51


State 36

   53 termo: T_V .

    $default  reduce using rule 53 (termo)


State 37

   54 termo: T_F .

    $default  reduce using rule 54 (termo)


State 38

   52 termo: T_NUMERO .

    $default  reduce using rule 52 (termo)


State 39

   55 termo: T_NAO . termo

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    termo  go to state 52


State 40

   56 termo: T_ABRE . expr T_FECHA

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expr   go to state 53
    termo  go to state 42


State 41

   28 escrita: T_ESCREVA expr .
   40 expr: expr . T_VEZES expr
   41     | expr . T_DIV expr
   42     | expr . T_MAIS expr
   43     | expr . T_MENOS expr
   44     | expr . T_MAIOR expr
   45     | expr . T_MENOR expr
   46     | expr . T_IGUAL expr
   47     | expr . T_E expr
   48     | expr . T_OU expr

    T_VEZES  shift, and go to state 54
    T_DIV    shift, and go to state 55
    T_MAIS   shift, and go to state 56
    T_MENOS  shift, and go to state 57
    T_IGUAL  shift, and go to state 58
    T_MAIOR  shift, and go to state 59
    T_MENOR  shift, and go to state 60
    T_E      shift, and go to state 61
    T_OU     shift, and go to state 62

    $default  reduce using rule 28 (escrita)


State 42

   49 expr: termo .

    $default  reduce using rule 49 (expr)


State 43

   31 repeticao: T_ENQTO $@5 . expr T_FACA $@6 lista_comandos T_FIMENQTO

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expr   go to state 63
    termo  go to state 42


State 44

   34 selecao: T_SE expr . T_ENTAO $@7 lista_comandos T_SENAO $@8 lista_comandos T_FIMSE
   40 expr: expr . T_VEZES expr
   41     | expr . T_DIV expr
   42     | expr . T_MAIS expr
   43     | expr . T_MENOS expr
   44     | expr . T_MAIOR expr
   45     | expr . T_MENOR expr
   46     | expr . T_IGUAL expr
   47     | expr . T_E expr
   48     | expr . T_OU expr

    T_ENTAO  shift, and go to state 64
    T_VEZES  shift, and go to state 54
    T_DIV    shift, and go to state 55
    T_MAIS   shift, and go to state 56
    T_MENOS  shift, and go to state 57
    T_IGUAL  shift, and go to state 58
    T_MAIOR  shift, and go to state 59
    T_MENOR  shift, and go to state 60
    T_E      shift, and go to state 61
    T_OU     shift, and go to state 62


State 45

    2 programa: cabecalho variaveis $@1 T_INICIO lista_comandos T_FIM .

    $default  reduce using rule 2 (programa)


State 46

   18 lista_comandos: comando lista_comandos .

    $default  reduce using rule 18 (lista_comandos)


State 47

   16 tamanho: T_ABREC T_NUMERO . $@3 T_FECHAC

    $default  reduce using rule 15 ($@3)

    $@3  go to state 65


State 48

   39 indexador: T_ABREC . expr $@10 T_FECHAC

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expr   go to state 66
    termo  go to state 42


State 49

   36 atribuicao: T_IDENTIF $@9 indexador . T_ATRIB expr

    T_ATRIB  shift, and go to state 67


State 50

   25 leitura: T_LEIA T_IDENTIF $@4 . posicao

    T_ABREC  shift, and go to state 68

    $default  reduce using rule 26 (posicao)

    posicao  go to state 69


State 51

   51 termo: T_IDENTIF $@11 . indice

    T_ABREC  shift, and go to state 70

    $default  reduce using rule 57 (indice)

    indice  go to state 71


State 52

   55 termo: T_NAO termo .

    $default  reduce using rule 55 (termo)


State 53

   40 expr: expr . T_VEZES expr
   41     | expr . T_DIV expr
   42     | expr . T_MAIS expr
   43     | expr . T_MENOS expr
   44     | expr . T_MAIOR expr
   45     | expr . T_MENOR expr
   46     | expr . T_IGUAL expr
   47     | expr . T_E expr
   48     | expr . T_OU expr
   56 termo: T_ABRE expr . T_FECHA

    T_VEZES  shift, and go to state 54
    T_DIV    shift, and go to state 55
    T_MAIS   shift, and go to state 56
    T_MENOS  shift, and go to state 57
    T_IGUAL  shift, and go to state 58
    T_MAIOR  shift, and go to state 59
    T_MENOR  shift, and go to state 60
    T_E      shift, and go to state 61
    T_OU     shift, and go to state 62
    T_FECHA  shift, and go to state 72


State 54

   40 expr: expr T_VEZES . expr

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expr   go to state 73
    termo  go to state 42


State 55

   41 expr: expr T_DIV . expr

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expr   go to state 74
    termo  go to state 42


State 56

   42 expr: expr T_MAIS . expr

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expr   go to state 75
    termo  go to state 42


State 57

   43 expr: expr T_MENOS . expr

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expr   go to state 76
    termo  go to state 42


State 58

   46 expr: expr T_IGUAL . expr

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expr   go to state 77
    termo  go to state 42


State 59

   44 expr: expr T_MAIOR . expr

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expr   go to state 78
    termo  go to state 42


State 60

   45 expr: expr T_MENOR . expr

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expr   go to state 79
    termo  go to state 42


State 61

   47 expr: expr T_E . expr

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expr   go to state 80
    termo  go to state 42


State 62

   48 expr: expr T_OU . expr

    T_IDENTIF  shift, and go to state 35
    T_V        shift, and go to state 36
    T_F        shift, and go to state 37
    T_NUMERO   shift, and go to state 38
    T_NAO      shift, and go to state 39
    T_ABRE     shift, and go to state 40

    expr   go to state 81
    termo  go to state 42


State 63

   31 repeticao: T_ENQTO $@5 expr . T_FACA $@6 lista_comandos T_FIMENQTO
   40 expr: expr . T_VEZES expr
   41     | expr . T_DIV expr
   42     | expr . T_MAIS expr
   43     | expr . T_MENOS expr
   44     | expr . T_MAIOR expr
   45     | expr . T_MENOR expr
   46     | expr . T_IGUAL expr
   47     | expr . T_E expr
   48     | expr . T_OU expr

    T_FACA   shift, and go to state 82
    T_VEZES  shift, and go to state 54
    T_DIV    shift, and go to state 55
    T_MAIS   shift, and go to state 56
    T_MENOS  shift, and go to state 57
    T_IGUAL  shift, and go to state 58
    T_MAIOR  shift, and go to state 59
    T_MENOR  shift, and go to state 60
    T_E      shift, and go to state 61
    T_OU     shift, and go to state 62


State 64

   34 selecao: T_SE expr T_ENTAO . $@7 lista_comandos T_SENAO $@8 lista_comandos T_FIMSE

    $default  reduce using rule 32 ($@7)

    $@7  go to state 83


State 65

   16 tamanho: T_ABREC T_NUMERO $@3 . T_FECHAC

    T_FECHAC  shift, and go to state 84


State 66

   39 indexador: T_ABREC expr . $@10 T_FECHAC
   40 expr: expr . T_VEZES expr
   41     | expr . T_DIV expr
   42     | expr . T_MAIS expr
   43     | expr . T_MENOS expr
   44     | expr . T_MAIOR expr
   45     | expr . T_MENOR expr
   46     | expr . T_IGUAL expr
   47     | expr . T_E expr
   48     | expr . T_OU expr
